0.0.5

* Range clamping and coercion to integers

0.0.4

* Various bug fixes

0.0.3

* Switch to Python

0.0.2

* Bug fixes to C Library

0.0.1

* Original C Library